# Weather-Tweets-K8s-GCP

./: Documentation.md  README.md  docker-compose.yml
go-api/: Dockerfile  Dockerfile.consumer  Dockerfile.rabbitConsumer  Dockerfile.rabbitmq-consumer  go.mod  go.sum
go-api/cmd/server/: main.go
go-api/consumer/: main.go
go-api/internal/handler/: weather.go
go-api/internal/kafka/: kafka-consumer.go  producer.go
go-api/internal/pb/: weather.pb.go  weather_grpc.pb.go
go-api/internal/rabbitmq/: producer.go  rabbit-consumer.go
go-api/internal/service/: weather.go
go-api/rabbitmq-consumer/: main.go
k8s/: go-api.yaml  go-service.yaml  grafana-values.yaml  ingress.yaml  kafka-consumer.yaml  kafka.yaml  locustfile.py  rabbit-consumer.yaml  rabbitmq.json  rabbitmq.yaml  redis-values.yaml  rust-api-hpa.yaml  rust-api.yaml  rust-service.yaml
proto/: weather.proto
weather-api/: Cargo.toml  Dockerfile  build.rs
weather-api/src/: grpc_client.rs  main.rs  models.rs
