[package]
name = "weather-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.9"
prost = "0.11"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }